fix: update bar text z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
 
 section {
   width: 100%;
-  margin-bottom: 4px;
+  margin-bottom: 16px !important;
 }
 
 #map {
@@ -31,6 +31,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 2px;
 }
 
 #health .fill {
@@ -62,10 +63,9 @@ section {
 
 .action::after {
   position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .action.selected {
@@ -105,6 +105,7 @@ section {
 
 .bar .bar-text {
   color: white;
+  z-index: 10;
 }
 
 .tile {
